[Fix] (chat) 코드 클리닝